cabal-version:      2.4
name:               dragrace-haskell2
version:            0.1.0.0
synopsis:           Sieve of Eratosthenes Benchmark

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             W. Gordon Goodsman (GordonBGood)
maintainer:         GordonBGood@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable dragrace-haskell2
    main-is:          primes.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.7 && <5
                    , array
                    , time

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
