[package]
name = "prime-sieve-rust"
version = "0.1.0"
authors = ["Michael Barber <60610888+mike-barber@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus="1.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "simple-bits"
path = "src/simple-bits.rs"

[[bin]]
name = "abstracted"
path = "src/abstracted.rs"
